Fixed the scheduler and logging of scheduled tasks, removed old 'hello-world' route from swagger and code
